welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:2: error: ';' expected but ')' found.
  return (estDansInt(30,40,a) && estDansInt(30,40,b))  ) || (estDansInt(40,50,a) && estDansInt(40,50,b))  )
                                                       ^