welcome.lessons.welcome.bat.bool1.In3050.scala.code
def in3050(a:Int, b:Int):Boolean = {
  return (estDansInt(30,40,a) && estDansInt(30,40,b))  ) || (estDansInt(40,50,a) && estDansInt(40,50,b))  )
  
}


def estDansInt(x:Int, a:Int, b:Int):Boolean ={
  return x <= b && x >= a
}